--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^7.4.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "razorpay": "^2.9.2",
     "sharp": "^0.32.5",
     "slugify": "^1.6.6",
     "xss-clean": "^0.1.4"
