--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon ./src/server.ts",
-    "start": "node ./dist/app.js"
+    "start": "node ./dist/server.js"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
